--- a/package.json
+++ b/package.json
@@ -1,91 +1,140 @@
 {
-  "name": "seller-sites-dashboard",
+  "name": "react-starter",
   "version": "0.0.1",
-  "description": "Reverb Seller Sites Dashboard",
-  "private": true,
+  "description": "React Starter",
+  "private": false,
   "main": "app/index.js",
+  "repository": "git@github.com:drewbietron/react-starter.git",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack --config webpack.prod.config.js",
-    "test:circle": "./node_modules/karma-cli/bin/karma start karma-prod.conf.js",
-    "test": "./node_modules/karma-cli/bin/karma start karma-test.conf.js",
-    "beta-tests": "babel-node mocha-runner.js",
-    "analyze-bundle": "rm stats.json; webpack --progress --colors --config webpack.prod.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json build -m static"
+    "start": "webpack-dev-server --https --cert ./ssl/server.crt --key ./ssl/server.key",
+    "build": "rm -rf build; webpack --bail --config webpack.prod.config.js",
+    "test": "jest --runInBand",
+    "test-debug": "node --inspect-brk jest --runInBand --watch",
+    "integration-tests":
+      "mocha --compilers ts:ts-node/register --timeout 10000 'integration-tests/**/*-test.ts'",
+    "analyze-bundle":
+      "rm stats.json; webpack --progress --colors --config webpack.prod.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json build -m static"
   },
-  "author": "Reverb.com LLC",
+  "author": "Drew Templeton Inc.",
   "license": "ISC",
+  "jest": {
+    "testRegex": "(/__tests__/.*|(\\-|/)(test))\\.(js|jsx|ts|tsx)?$",
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json"],
+    "testPathIgnorePatterns": [
+      "/integration-tests/",
+      "/node_modules/",
+      "support",
+      "fixtures",
+      ".eslintrc.js"
+    ],
+    "setupFiles": ["./jest-config.js"]
+  },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
+    "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.1.5",
+    "@types/faker": "^4.1.1",
+    "@types/jasmine": "^2.8.2",
+    "@types/jest": "^21.1.8",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^8.0.8",
+    "@types/numeral": "^0.0.20",
+    "@types/qs": "^6.5.0",
+    "@types/react": "^15.0.21",
+    "@types/react-redux": "^5.0.3",
+    "@types/react-slick": "^0.14.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^1.2.7",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/rheostat": "^2.1.2",
+    "@types/sinon": "^2.3.5",
     "bdd-lazy-var": "1.2.0",
     "chai": "^3.5.0",
-    "cheerio": "0.22.0",
+    "cheerio": "^0.22.0",
     "css-loader": "^0.23.1",
-    "enzyme": "2.4.1",
+    "enzyme": "^2.8.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "eslint": "^3.6.0",
     "eslint-config-airbnb": "11.1.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "2.2.2",
     "eslint-plugin-react": "6.2.2",
+    "express": "^4.14.1",
     "faker": "3.1.0",
     "file-loader": "^0.9.0",
+    "finalhandler": "^0.5.1",
     "import-glob-loader": "^1.1.0",
-    "jsdom": "^6.1.0",
+    "install": "^0.10.1",
+    "jest": "^21.2.1",
+    "jest-cli": "20.0.4",
+    "jsdom": "^11.2.0",
     "json-loader": "^0.5.4",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-cli": "1.0.1",
-    "karma-junit-reporter": "1.1.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "2.2.0",
-    "karma-notification-reporter": "0.1.1",
-    "karma-sourcemap-loader": "~0.3",
-    "karma-webpack": "1.8.0",
     "mocha": "3.0.2",
-    "node-sass": "^3.8.0",
+    "mocha-generators": "^1.2.0",
+    "nightmare": "^2.10.0",
+    "node-sass": "^4.5.3",
     "nodemon": "1.10.2",
+    "path": "^0.12.7",
     "postcss-loader": "^0.13.0",
     "react-addons": "^0.9.1-deprecated",
     "react-addons-test-utils": "^15.2.1",
     "react-loader": "^2.4.0",
-    "sass-loader": "4.0.0",
+    "redux-mock-store": "^1.2.1",
+    "sass-loader": "^6.0.5",
+    "serve-static": "^1.11.2",
     "static-site-generator-webpack-plugin": "^3.0.0",
-    "style-loader": "^0.13.1",
-    "webpack-bundle-analyzer": "^1.4.1",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.17.0",
+    "ts-jest": "^21.2.4",
+    "ts-loader": "^3.2.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "tslint-config-prettier": "^1.6.0",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.6.2",
+    "webpack-bundle-analyzer": "^2.8.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "airbnb-js-shims": "^1.0.1",
     "autoprefixer": "6.5.0",
+    "axios": "^0.15.3",
+    "bind-decorator": "^1.0.11",
+    "extract-text-webpack-plugin": "^2.1.0",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
     "classnames": "2.2.5",
     "compression-webpack-plugin": "0.3.1",
     "copy-webpack-plugin": "3.0.1",
+    "core-js": "^2.4.1",
     "cssnano": "^3.7.5",
-    "extract-text-webpack-plugin": "1.0.1",
-    "foundation-sites": "6.2.3",
+    "fetch-ponyfill": "^3.0.2",
     "glob": "^7.1.0",
     "html-webpack-plugin": "2.22.0",
-    "isomorphic-fetch": "2.2.1",
+    "jsondiffpatch": "^0.2.5",
     "lodash": "4.14.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
-    "qs": "6.3.0",
-    "react": "^15.2.1",
-    "react-addons-css-transition-group": "15.3.1",
+    "prop-types": "^15.5.10",
+    "qs": "^6.5.1",
+    "react": "15.6.1",
+    "react-click-outside": "github:tj/react-click-outside",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.2.1",
-    "react-helmet": "3.1.0",
+    "react-facebook-pixel": "^0.1.0",
+    "react-ga": "2.2.0",
+    "react-helmet": "^5.2.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "4.4.5",
     "react-router": "3.0.0",
+    "react-scroll": "^1.5.4",
+    "react-slick": "^0.15.4",
+    "react-test-renderer": "^15.5.4",
+    "react-transition-group": "^2.2.1",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
-    "reselect": "2.5.4",
-    "sinon": "2.0.0-pre.2",
-    "webpack": "^1.13.1",
-    "webpack-validator": "2.2.7",
+    "reselect": "^3.0.1",
+    "webpack": "^2.5.1",
     "zenscroll": "^3.2.2"
   }
 }
